--- a/index.html
+++ b/index.html
@@ -33,7 +33,23 @@
 
 
   <h1>my-card</h1>
-  <my-card>aaaa</my-card>
+
+  <my-card></my-card>
+
+  <my-card title="Mud City" image="https://cdn.britannica.com/49/102749-050-B4874C95/Kuala-Lumpur-Malaysia.jpg" 
+  description="aka Kuala Lumpur" link="https://cdn.vectorstock.com/i/1000v/55/67/district-map-malaysian-capital-kuala-lumpur-vector-32875567.jpg" 
+  linkText="Map" buttonLink="https://hax.psu.edu" buttonText="Details"></my-card>
+
+  <my-card title="IT'S LIT" image="https://lit.dev/images/logo-whitebg-padded-1600x800.png" 
+  description="#litdev" link="https://lit.dev/" linkText="website" buttonLink="https://lit.dev/" buttonText="subscribe"></my-card>
+
+  <my-card title="idk" image="https://miro.medium.com/v2/resize:fit:1400/0*rRR3cxkB_E6I_iNB.png" 
+  description="funny meme haha" link="https://www.google.com/url?sa=i&url=https%3A%2F%2Fjavascript.plainenglish.io%2F15-lame-jokes-only-programmers-can-understand-6db955ae84b2&psig=AOvVaw0aGfStmPhi6fsEYSEjoyHb&ust=1727111595270000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCLiOlJqG14gDFQAAAAAdAAAAABAI" 
+  linkText="Credit" buttonLink="https://www.gbnews.com/media-library/dave-grohl.jpg?id=53612941&width=1200&height=800&quality=90&coordinates=18%2C0%2C132%2C0" buttonText="DO NOT CLICK"></my-card>
+
+  <my-card title="ZOOMERGAZE" image="https://i.ytimg.com/vi/H9Vx-Iy_plg/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLD3ygxvuEJbA1uL2QRU428gu4giAA" 
+  description="IS NOT REAL SHOEGAZE" link="https://en.wikipedia.org/wiki/Shoegaze#:~:text=Shoegaze%20(originally%20called%20shoegazing%20and,%2C%20feedback%2C%20and%20overwhelming%20volume" 
+  linkText="Learn here" buttonLink="https://www.youtube.com/watch?v=OBxJGg6cjqk&list=PLc8QTmhJeIWthQ7unEmqHGw7fsthxp0qh" buttonText="Real shoegaze"></my-card>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
