--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
   <h1>my-card</h1>
 
-  <my-card></my-card>
+  <my-card fancy> <p>aaaaaa</p></my-card>
 
   <my-card title="Mud City" image="https://cdn.britannica.com/49/102749-050-B4874C95/Kuala-Lumpur-Malaysia.jpg" 
-  description="aka Kuala Lumpur" link="https://cdn.vectorstock.com/i/1000v/55/67/district-map-malaysian-capital-kuala-lumpur-vector-32875567.jpg" 
-  linkText="Map" buttonLink="https://hax.psu.edu" buttonText="Details"></my-card>
+  link="https://cdn.vectorstock.com/i/1000v/55/67/district-map-malaysian-capital-kuala-lumpur-vector-32875567.jpg" 
+  linkText="Map" buttonLink="https://hax.psu.edu" buttonText="Details" description="aaaaaa"></my-card>
 
   <my-card title="IT'S LIT" image="https://lit.dev/images/logo-whitebg-padded-1600x800.png" 
   description="#litdev" link="https://lit.dev/" linkText="website" buttonLink="https://lit.dev/" buttonText="subscribe"></my-card>
